# prs

./: .gitignore  Cargo.toml  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  REFACTORING.md
.cursor/rules/: prs-project.mdc
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
docker/: Dockerfile.builder  Dockerfile.runtime  Dockerfile.ubi9
prs/: Cargo.toml
rusqlite_interface/: Cargo.toml
scripts/: docker_build.sh  update_deps.sh
scripts/release/: setup_upx.sh
sqlite_interface/: Cargo.toml
src/: cli.rs  main.rs  output.rs  proc.rs
