[package]
name = "prs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# easier dev
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }

# core
procfs = { version = "0.16.0", features = ["serde1"] }
sqlite = "0.36.1"

# faster syscalls
duct = "0.13.7"
cached = "0.53.1"

# observability
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
debug = false
