[package]
name = "prs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# easier dev
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }

# core
procfs = { version = "0.16", features = ["serde1"] }
sqlite = "0.36"

# faster syscalls
duct = "0.13"
cached = "0.53"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
debug = false
